--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cross-fetch": "^1.1.1",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "google-map-react": "^0.27.0",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "path": "^0.12.7",
