--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "whenstop",
+  "name": "onestop",
   "version": "0.0.1",
-  "description": "Get predictions for public transit from Google Assistant",
+  "description": "Get predictions for public transit in a web view",
   "main": "index.js",
   "author": "Ajay Gandhi",
   "license": "MIT",
